# ai_generate_test

./: .gitignore  README.md  cypress.config.js  package-lock.json  package.json  playwright.config.ts  playwright.perf.config.ts  tsconfig.json
ai-test-poc/: README.md  pyproject.toml
ai-test-poc/golden_sets/: healing_golden.json  validation_golden.json
ai-test-poc/reports/: healing_log.json
ai-test-poc/src/generators/: __init__.py  data_factory.py
ai-test-poc/src/healing/: __init__.py  healer.py  ollama_client.py
ai-test-poc/src/monitoring/: __init__.py  drift_detector.py  hallucination_tracker.py
ai-test-poc/src/validators/: __init__.py  content_validator.py
ai-test-poc/tests/: conftest.py  test_content_validation.py  test_data_generation.py  test_model_governance.py  test_self_healing.py
antigravity-plans/: 00-INDEX.md  01-auth-token-lifecycle.md  02-crud-lifecycle-suite.md  03-schema-contract-validation.md  04-negative-path-matrix.md  05-performance-budget.md  06-cross-runner-parity.md  07-stateful-concurrency.md  08-ci-pipeline-and-reports.md  09-test-data-factory.md  10-spec-drift-regeneration.md  AI_Testing_POC_IMPLEMENTATION_PLAN.md  Feature_Implementation_Plan_20260501_135857.md  REVIEW_IMPLEMENTATION_PLAN_20260501_143637_myself.md
docs/: auto-regeneration.md  ci-architecture.md  concurrency-findings.md  negative-matrix.md
perf-results/: 2026-05-01T00-57-44-984Z.json  2026-05-01T01-05-52-669Z.json  trend.html
prompts/: api-test-gen.md
scripts/: parity-check.js  perf-report.js  regenerate-tests.js  spec-diff.js
specs/: auth-openapi.yaml  (+7 more)
(+39 files in other folders)
